@@ -1,3 +1,7 @@
+2004-03-09  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* uuencode.tcl (::uuencode::pad): don't use log package
+
 2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
